# mistral-chat

./: Cargo.toml  README.md
src/: main.rs
