[package]
name = "mistral-chat"
description = "Simple Rust CLI chat with Mistral AI"
authors = ["Vi+ <vitaliyy@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
